fixed genre selector and genre overlap

--- a/src/app/component-modules/home/components/home.component.scss
+++ b/src/app/component-modules/home/components/home.component.scss
@@ -152,6 +152,7 @@
   font-weight: 500;
   position: sticky;
   top: 30px;
+  z-index: -1;
 }
 
 .activity-name {
